[project]
name = "cryptobot-python"
version = "0.5.1"
description = "Non official, but friendly CryptoBot library for the Python language"
authors = [
    {name = "Reinier Hernández",email = "sasuke.reinier@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9.12"
dependencies = ["httpx>=0.28.1"]
keywords = ["cryptocurrency", "cryptobot", "telegram"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser", "sphinx-intl"]
webhook = ["fastapi", "uvicorn", "colorama", "python-dotenv"]

[project.urls]
homepage = "https://cryptobot-python.readthedocs.io/en/latest"
repository = "https://github.com/ragnarok22/cryptobot_python"
documentation = "https://cryptobot-python.readthedocs.io/en/latest"
"Bug Tracker" = "https://github.com/ragnarok22/cryptobot_python/issues"

[dependency-groups]
dev = [
    "flake8>=6.0.0,<7.4.0",
    "coverage>=7.2.2,<7.11.0",
    "pytest>=7.2.0,<8.5.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "pytest-httpx>=0.28.0,<1.0.0",
    "pytest-asyncio>=0.24.0,<2.0.0",
    "pre-commit>=3.6.2,<5.0.0",
    "ruff>=0.14.0",
    "mypy>=1.18.2",
    "sphinx>=7.1.2,<8.0.0",
    "sphinx-rtd-theme>=1.3.0,<4.0.0",
    "myst-parser>=2.0.0,<4.0.0",
    "sphinx-intl>=2.1.0,<3.0.0",
    "watchdog>=2.2.1,<6.1.0",
    "tox>=4.30.3",
    "twine>=6.2.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.39.0",
    "colorama>=0.4.6",
    "fastapi>=0.128.8",
]

[tool.coverage.run]
omit = [
    "*/tests/*",
    "*/docs/*",
    "*/*.rst",
]

[tool.ruff]
line-length = 127
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "SIM"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["cryptobot"]

[tool.mypy]
python_version = "3.9"
files = ["cryptobot"]
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true

[[tool.mypy.overrides]]
module = ["colorama"]
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["cryptobot"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
